index.css
* {
	box-sizing: border-box;
}

html {
	scroll-behavior: smooth;
	height: 100vh;
	padding: 0;
	margin: 0;
}

body {
	min-height: 100vh;
	padding: 0;
	margin: 0;
	font-family: 'Quicksand', sans-serif;
	font-size: 24px;
    color: #3E3E3E;
    text-align: justify;
}

h1 {
    margin: 0;
    padding: 0;
    font-size: 80px;
    text-align: center;
    font-family: 'Clicker Script', cursive;
    color: #F4AFA8;
}

h2 {
	margin: 0;
	padding: 2vh;
	color: #F4AFA8;
	background-color: white;
}

p {
	margin: 0;
}

.flexBoxColCenter {
	display: flex;
	flex-flow: column nowrap;
	justify-content: center;
	align-items: center;
}

.flexBoxRowEven {
	display: flex;
	flex-flow: row wrap;
	justify-content: space-evenly;
	align-items: center;
}

#headerImg {
	height: 100vh;
	width: 100%;
	background-image: url("wedding.jpg");
	background-size: cover;
}

#headerImg > .downButton {
	position: absolute;
	top: 90%;
	left: 50%;
}

.downButton > img {
	position: relative;
	width: 50px;
	top: 90%;
}

#nav {
	display: flex;
	flex-direction: row;
	justify-content: flex-start;
	opacity: transparent;
	position: -webkit-sticky;
	position: sticky;
	top: 0px;
	width: 100%;
	z-index: 1;
}

#nav > a {
	color: white;
	padding: 14px 16px;
	text-align: center;
}

#home {
	background-color: #F4AFA8;
}

#about {
	height: 100vh;
	width: 100%;
}

#about > div {
	height: 80vh;
	width: 40%;
}

.aboutText {
	margin: 1.5vh 0;
}

#fourPictures > div {
	height: 50%;
	width: 100%;
}

.smallPicture {
	width: 15vw;
}

.parallax {
	height: 100vh;
	background-attachment: fixed;
	background-size: cover;
	position: relative;
}

#portfolio {
	background-image: url("engagement.jpg");
	text-align: center;
}

#section {
	height: 100vh;
	text-align: center;
}

#parallax {
	background-image: url("1.jpg");
	text-align: center;
}

.imgDiv {
	position: relative;
}

.textOverImg {
	position: absolute;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
}

.textOverImg > p {
	margin: 0;
	padding: 0.5vw;
	font-size: 1.5vw;
	background-color: white;
}

footer {
	position: absolute;
	right: 0;
	bottom: 0;
	left: 0;
	color: #F4AFA8;
	background-color: #3E3E3E;
}

